licenses(["notice"])

load("//third_party:tools/protobuf.bzl", "cc_proto_library")

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
    visibility = ["//visibility:private"],
)

######### LIBRARY #########

cc_library(
    name = "onnx",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = [
        "//teq:teq",
        "//onnx:onnx_cc_proto",
        "@boost//:uuid",
        "@boost//:bimap",
    ],
)

genrule(
    name = "onnx_to_local",
    srcs = ["@com_github_onnx_onnx//:proto3"],
    outs = ["onnx.proto"],
    cmd = "cp $< $@",
)

cc_proto_library(
    name = "onnx_cc_proto",
    srcs = ["onnx.proto"],
    copts = ["-std=c++17"],
    proto_paths = ["$$(dirname $(location onnx.proto))/.."],
)

######### TOOLS #########

cc_binary(
    name = "inspector",
    srcs = ["inspector.cpp"],
    copts = ["-std=c++17"],
    deps = [
        "//onnx:onnx_cc_proto",
        "@com_github_mingkaic_cppkg//estd:estd",
        "@com_github_mingkaic_cppkg//flag:flag",
    ],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = ["//onnx:test_srcs"],
    deps = [
        "//onnx:onnx",
        "//teq:mock_teq",
        "//dbg:print",
        "@gtest//:gtest",
        "@com_github_mingkaic_cppkg//diff:diff",
        "@com_github_mingkaic_cppkg//exam:exam",
    ],
    copts = ["-std=c++17"],
    data = ["//:test_models"],
    linkstatic = True,
)
