licenses(["notice"])

load(
    "@com_github_stackb_rules_proto//cpp:cpp_proto_library.bzl",
    "cpp_proto_library"
)

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["//pbm:protos", "BUILD.bazel"],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
    visibility = ["//visibility:private"],
)

######### LIBRARY #########

proto_library(
    name = "pbm_proto",
    srcs = ["//pbm:protos"],
)

cpp_proto_library(
    name = "pbm_cc_proto",
    deps = ["//pbm:pbm_proto"],
)

cc_library(
    name = "pbm",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = [
        "//tag:tag",
        "//pbm:pbm_cc_proto",
    ],
)

######### TOOLS #########

cc_binary(
    name = "inspector",
    srcs = glob(["inspector.cpp"]),
    copts = ["-std=c++17"],
    deps = [
        "//pbm:pbm_cc_proto",
        "//onnx:onnx_cc_proto",
        "@com_github_mingkaic_cppkg//estd:estd",
        "@com_github_mingkaic_cppkg//flag:flag",
    ],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = ["//pbm:test_srcs"],
    deps = [
        "//pbm:pbm",
        "//teq:mock_teq",
        "//dbg:stream_out",
        "@gtest//:gtest",
        "@com_github_mingkaic_cppkg//diff:diff",
        "@com_github_mingkaic_cppkg//exam:exam",
    ],
    copts = ["-std=c++17"],
    data = ["//:test_models"],
    linkstatic = True,
)
