licenses(["notice"])

load(
    "@com_github_stackb_rules_proto//cpp:cpp_proto_library.bzl",
    "cpp_proto_library"
)

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
    visibility = ["//visibility:private"],
)

######### LIBRARY #########

proto_library(
    name = "weight_proto",
    srcs = ["//pll:protos"],
)

cpp_proto_library(
    name = "weight_cc_proto",
    deps = ["//pll:weight_proto"],
)

cc_library(
    name = "pll",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = [
        "//ead:ead",
        "@boost//:asio",
    ],
)

######### TOOLS #########

cc_binary(
    name = "inspector",
    srcs = glob(["inspector.cpp"]),
    copts = ["-std=c++17"],
    deps = [
        "//pll:weight_cc_proto",
        "@com_github_mingkaic_cppkg//flag:flag",
    ],
)

cc_binary(
    name = "rt_anubis",
    srcs = ["rtscale.cpp"],
    copts = ["-std=c++17"],
    deps = [
        "//ead:ead",
        "//pll:weight_cc_proto",
        "@com_github_mingkaic_cppkg//flag:flag",
    ],
)

######### TEST #########

cc_test(
    name = "test",
    srcs = ["//pll:test_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//dbg:stream_out",
        "//pll:pll",
        "@gtest//:gtest",
        "@com_github_mingkaic_cppkg//exam:exam",
    ],
    linkstatic = True,
)
