licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ctest_srcs",
    srcs = glob(["test/*.cpp"]),
    visibility = ["//visibility:public"],
)

######### LIBRARY #########

cc_library(
    name = "prx",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = ["//ead:ead"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "ctest",
    srcs = ["//prx:ctest_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//prx:prx",
        "//dbg:dbg",
        "//testutil:testutil",
    ],
    linkstatic = True,
)
