licenses(["notice"])

load("//third_party/drake_rules:pybind.bzl", "pybind_library")

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ctest_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
)

filegroup(
    name = "ptest_srcs",
    srcs = glob([
        "test/*.py",
    ]),
)

######### LIBRARY #########

cc_library(
    name = "prx",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = ["//ead:ead"],
    visibility = ["//visibility:public"],
)

pybind_library(
    name = "prx_py",
    cc_srcs = ["//prx:python/prx.cpp"],
    cc_deps = ["//prx:prx"],
    py_deps = ["//ead:ead_py"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "ctest",
    srcs = ["//prx:ctest_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//prx:prx",
        "//testutil:testutil",
    ],
    linkstatic = True,
)

py_test(
    name = "ptest",
    srcs = ["//prx:ptest_srcs"],
    deps = ["//prx:prx_py"],
)
